# SHGAP

./: .dockerignore  .gitignore  .prettierignore  Proof of Concept Scope.docx  README.md  SHG_POC_Development_Sprint_Plan.xlsx  eslint.config.js  package-lock.json  package.json  tsconfig.base.json  turbo.json
apps/ml-services/: .env.example  Dockerfile  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  run.py
apps/ml-services/app/: config.py  main.py
apps/ml-services/app/categorization/: embedder.py  repository.py  router.py  schemas.py  service.py
apps/ml-services/app/market_intelligence/: agmarknet_client.py  backtest.py  demand_model.py  feature_engineering.py  feature_store.py  forecast_router.py  hotspots.py  model_registry.py  pipeline.py  price_history_store.py  price_model.py  repository.py  (+3 more)
apps/ml-services/scripts/: ingest_scheme_chunks.py  run_feature_pipeline.py  train_models.py
apps/ml-services/tests/: test_health.py
apps/voice-service/: .env.example  Dockerfile  package.json  pyproject.toml  requirements-dev.txt  requirements.txt
apps/voice-service/app/: actions.py  bot.py  config.py  core_api_client.py  main.py  ml_services_client.py  prompts.py  session.py  text_chat.py  transliteration.py
apps/voice-service/eval/: run_intent_eval.py  run_stt_wer_eval.py  test_utterances.py
apps/voice-service/tests/: fake_redis.py  test_actions.py  test_core_api_client.py  test_health.py  test_ml_services_client.py  test_session.py  test_text_chat.py  test_text_chat_endpoint.py  test_transliterate_endpoint.py  test_transliteration.py
(+289 files in other folders)
