[project]
name = "ml-services"
version = "0.1.0"
description = "Product categorization, forecasting, buyer recommendation & ranking, explainability"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
