[project]
name = "voice-service"
version = "0.1.0"
description = "Pipecat voice pipeline (Groq STT/LLM + Sarvam TTS over WebRTC) with a core-api action dispatcher"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
